# planfighttactics

./: .gitignore  Ahri.md  Baron Nashor.md  Compositions.base  Hub.md  README.md  Websites.md  test.md
.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  graph.json  types.json  workspace.json
16.1/: GAMES.md  PATCH 16.1.md
Comments/: Bilge 16.3.md  Bilgewater 16.1C.md  Gankplank slayers 16.3.md  Ixtal Brock 16.1c.md  Jinx Reroll 16.1C.md  Piltover 16.1C.md  Shadow Isles 16.1C.md  Void 16.1C.md  Void 16.3.md  Yordle Veigar 16.1C.md  Yordle Veigar 16.2.md
Comps/: Arcanist Shurima.md  Ashe Trynda.md  Draven Freljord Fast 9.md  Ixtal (+Reroll).md  Ixtal Brock.md  Ixtal Reroll.md  Jinx Reroll.md  Kalista Warden.md  Leblanc Bruiser.md  Piltover T-Rex.md  Piltover Vertical.md  Raph fast 8 (pas le level).md  Ryggs Fast9.md  Senna 5to9.md  Shadow Isles.md  Void Vertical.md  Yasuo Reroll.md  Yordle Veigar.md  Yunara Freljord.md
Games/: 3 way contest Ionia 2025-12-22.md  7 Freljord Volibear 2025-12-22.md  Baron 1 au 10 2025-12-21.md  Bilgewater MF 2025-12-30.md  Diana 2026-01-07.md  Piltover vertical highroll Loris 3 en 3-2.md  Shadow Isles Warden 2025-12-22.md  T-Rex 2026-01-07.md  Void 2025-12-30.md  Void Vertical 2025-12-22.md  Yasuo Reroll 2025-12-30.md  Yordle Veigar + Encouter Ryze.md
Item/: Adaptive Helm.md  Anti Heal Item.md  (+19 more)
python/: pyproject.toml
python/examples/: board_layout.py  quick_start.py  simple_examples.py
python/src/pytft/: __init__.py
python/src/pytft/models/: __init__.py  board.py  comp.py  item.py  unit.py  vault.py
(+178 files in other folders)
