[project]
name = "pytft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Léo Duret", email = "leoduret@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "networkx>=3.0", "pyyaml>=6.0", "obsidiantools>=0.10.0"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
